modal - interface para adicionar produtos

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -29,4 +29,19 @@ nav.sidebar {
 
     width: 100%;
   }
+
+  .cart {
+    cursor: pointer;
+  }
+
+  .side-price{
+    margin-top: 40px;
+
+    strong {
+      font-size: 2rem;
+
+    }
+  }
+
 }
+
