--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -45,3 +45,20 @@ nav.sidebar {
 
 }
 
+.cardButton {
+  border-radius: 50%;
+  background-color: var(--background-button2);
+  
+  padding: 20px;
+
+  width: 90px;
+  height: 90px;
+
+  object-fit: contain;
+
+  transition: opacity 0.2s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+}
