--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -59,13 +59,11 @@
     }
   }
 
-
   transition: opacity 0.2s;
 
   &:hover {
     opacity: 0.8;
   }
-  
 }
 
 .cursor {
@@ -82,6 +80,9 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+
+  align-items: center;
+  justify-content: center;
 }
 
 .button {
@@ -91,8 +92,6 @@
   align-items: center;
 
   cursor: pointer;
-
-  
 
   color: var(--white);
 
@@ -108,4 +107,3 @@
     opacity: 0.8;
   }
 }
-
